Views: reduce redundant layout/text-setting in in OmniboxTextView

- exit early from SetText when possible
- replace some uses of CalculatePreferredSize with GetPreferredSize, and
update preferred size when text changes


Bug: 712268
Change-Id: Iaf9440b75aa94ec09b67f207bc9f98e4ab0d9301
Reviewed-on: https://chromium-review.googlesource.com/1119209
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571898}
Former-commit-id: 45bf0faac15aab71a2e0ea6eb090ff2fdad01017