components/omnibox/browser/autocomplete_match.h
@@ -84,6 +84,14 @@ struct AutocompleteMatch {
           style(style) {
     }
 
+    bool operator==(const ACMatchClassification& other) const {
+      return offset == other.offset && style == other.style;
+    }
+
+    bool operator!=(const ACMatchClassification& other) const {
+      return offset != other.offset || style != other.style;
+    }
+
     // Offset within the string that this classification starts
     size_t offset;
 
